--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">TodoApp</string>
+    <string name="add_button">Add Button</string>
+    <string name="search_action">"Search Tasks"</string>
+    <string name="sort_action">Sort Button</string>
+    <string name="deleteAll_action">Delete All</string>
+
 </resources>
